--- a/example/build.gradle
+++ b/example/build.gradle
@@ -21,4 +21,5 @@ android {
 dependencies {
     compile project(':androidemoji')
     compile 'com.android.support:appcompat-v7:25.1.0'
+    compile 'com.android.support:recyclerview-v7:25.1.0'
 }
